--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -815,6 +815,8 @@ small h1 {
 #course_cover {
    border-radius: 50px;
     position: relative;
+    width:400px;
+    height:250px;
 }
 
 #scroll {
