--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -1802,10 +1802,71 @@ element.style {
 input#thumbnail {
     opacity: 0;
 }
+#myfile{
+    display:none;
 
-/* .uploadimg{
-    height:100px;
-    width:100px;
-} */
+
+
+  }
+ #upload_label{
+
+      margin-bottom: 20px;
+      width:350px;
+      height:200px;
+
+      background: #F6F7FA;
+    border: 1px dashed rgba(0, 0, 0, 0.25);
+    box-sizing: border-box;
+    border-radius: 15px;
+
+  }
+  #label_img2{
+      width:100px;
+      height:100px;
+    margin-bottom: 20px;
+      background: #F6F7FA;
+    border: 1px dotted rgba(0, 0, 0, 0.25);
+    box-sizing: border-box;
+    border-radius: 50px;
+    margin: auto!important;
+
+  }
+  #roundimgs{
+      width:100px;
+      height:100px;
+      border-radius: 50px;;
+  }
+
+
+  #fa-upload::before {
+      content: "";
+      display: flex;
+      justify-content: center;
+  }
+
+  @media(max-width:525px) {
+   #upload_label {
+       width:160px;
+       height:200px;
+
+}
+}
+#imgss{
+    width:350px;
+    height:200px;
+    border-radius: 20px;
+}
+@media(max-width:525px) {
+#imgss{
+    width:160px;
+    height:200px;
+    border-radius: 20px;
+}
+}
+
+
+
+
+
 
 
