--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -1878,3 +1878,10 @@ input#thumbnail {
     height: 75px;
     width: 75px;
 }
+
+#roundimgs {
+    width: 100px;
+    height: 102px;
+    border-radius: 50px;
+    margin: -3px -3px -3px -2px;
+}
