--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -1887,3 +1887,9 @@ input#thumbnail {
 div#second12 {
     padding-bottom: 30px;
 }
+
+.form-floating>.form-control:focus,
+.form-floating>.form-control:not(:placeholder-shown) {
+    padding-top: 1.625rem ! important;
+    padding-bottom: 0.625rem;
+}
