--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -1891,3 +1891,19 @@ div#second12 {
     padding-top: 5px !important;
     padding-bottom: 0.625rem;
 }
+.custom-file-button input[type=file] {
+    margin-left: -2px !important;
+  }
+  
+
+  
+.custom-file-button input[type=file]::file-selector-button {
+  margin-left: 260px;
+  background-color: #F58415;
+  padding:10px;
+  border-radius: 15px;
+ padding-top: 15px;
+ padding-bottom: 15px;
+  
+  }
+  
