--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -1833,7 +1833,7 @@ input#thumbnail {
     width: 350px;
     height: 200px;
     background: #F6F7FA;
-    border: 1px dashed rgba(0, 0, 0, 0.25);
+    /* border: 1px dashed rgba(0, 0, 0, 0.25); */
     box-sizing: border-box;
     border-radius: 15px;
 }
@@ -1887,8 +1887,7 @@ div#second12 {
     padding-bottom: 30px;
 }
 
-.form-floating>.form-control:focus,
-.form-floating>.form-control:not(:placeholder-shown) {
-    padding-top: 5px !important;
+.form-floating>.form-control:-webkit-autofill {
+    padding-top: 1.625rem !important;
     padding-bottom: 0.625rem;
 }
