--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -256,7 +256,7 @@
     width: 96px;
     height: 96px;
     background: #F6F7FA;
-    border: 1px dashed rgba(0, 0, 0, 0.25);
+    /* border: 1px dashed rgba(0, 0, 0, 0.25); */
     box-sizing: border-box;
     border-radius: 50px;
 }
@@ -1853,7 +1853,7 @@ input#thumbnail {
     width: 100px;
     height: 100px;
     border-radius: 50px;
-    margin: -4px;
+    margin: -2px;
 }
 
 #fa-upload::before {
@@ -1906,43 +1906,47 @@ div#second12 {
     -ms-flex: 0 1 auto;
     flex: 0 1 auto;
     padding: 10px !important;
-    padding-right:150!important;
+    padding-right: 150!important;
+}
 
+.option1 {
+    width: 400px;
 }
-.option1{
-    width:400px;
-}
-.btnsss{
+
+.btnsss {
     margin-top: 40px;
 }
-.option1{
-    width:435px !important;
+
+.option1 {
+    width: 435px !important;
     margin-right: 70px !important;
-   padding-right: 0px;
-    padding-left:0px !important;
-
+    padding-right: 0px;
+    padding-left: 0px !important;
 }
+
 @media(max-width:425px) {
-    .option1{
-        width:190px !important;}
-
+    .option1 {
+        width: 190px !important;
+    }
 }
-.formsc{
+
+.formsc {
     border: none !important;
 }
-.btn-border{
-    border:1px solid black !important;
+
+.btn-border {
+    border: 1px solid black !important;
 }
 
 .custom-file-button input[type=file] {
     margin-left: -2px !important;
-  }
-.custom-file-button input[type=file]::file-selector-button {
-  margin-left: 267px;
-  background-color: #F58415;
-  padding:10px;
-  border-radius: 15px;
- padding-top: 15px;
- padding-bottom: 15px;
+}
 
-  }
+.custom-file-button input[type=file]::file-selector-button {
+    /* margin-left: 267px; */
+    background-color: #F58415;
+    padding: 10px;
+    border-radius: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
