--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -2090,3 +2090,9 @@ p.rating {
     display: none;
     text-align: center;
   }
+  .custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+  }
